fix(content card): content card spacings fixed

--- a/packages/themes/src/bootstrap/artbasel/scss/cards/_content_card.scss
+++ b/packages/themes/src/bootstrap/artbasel/scss/cards/_content_card.scss
@@ -194,10 +194,6 @@
 
     &-description {
       margin-bottom: 0;
-
-      & + .card-cta {
-        margin-top: $spacing-7;
-      }
     }
   }
 
